add map scale indicator

--- a/sandbox-gmaps3.html
+++ b/sandbox-gmaps3.html
@@ -172,6 +172,7 @@ var app = (function () {
                     fillColor: '#EEFFCC',
                     fillOpacity: 0.6
                 },
+         	scaleControl : true,
                 disableDefaultUI: true,
                 mapTypeControl: true,
                 mapTypeId: google.maps.MapTypeId.ROADMAP,
